; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/asihpi/extr_hpifunc.c_hpi_outstream_stop.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/asihpi/extr_hpifunc.c_hpi_outstream_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpi_message = type { i32, i32 }
%struct.hpi_response = type { i32 }

@HPI_OBJ_OSTREAM = common dso_local global i32 0, align 4
@HPI_OSTREAM_STOP = common dso_local global i32 0, align 4
@HPI_ERROR_INVALID_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hpi_outstream_stop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.hpi_message, align 4
  %5 = alloca %struct.hpi_response, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @HPI_OBJ_OSTREAM, align 4
  %7 = load i32, i32* @HPI_OSTREAM_STOP, align 4
  %8 = call i32 @hpi_init_message_response(%struct.hpi_message* %4, %struct.hpi_response* %5, i32 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = getelementptr inbounds %struct.hpi_message, %struct.hpi_message* %4, i32 0, i32 1
  %11 = getelementptr inbounds %struct.hpi_message, %struct.hpi_message* %4, i32 0, i32 0
  %12 = call i64 @hpi_handle_indexes(i32 %9, i32* %10, i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @HPI_ERROR_INVALID_HANDLE, align 4
  store i32 %15, i32* %2, align 4
  br label %20

16:                                               ; preds = %1
  %17 = call i32 @hpi_send_recv(%struct.hpi_message* %4, %struct.hpi_response* %5)
  %18 = getelementptr inbounds %struct.hpi_response, %struct.hpi_response* %5, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %16, %14
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @hpi_init_message_response(%struct.hpi_message*, %struct.hpi_response*, i32, i32) #1

declare dso_local i64 @hpi_handle_indexes(i32, i32*, i32*) #1

declare dso_local i32 @hpi_send_recv(%struct.hpi_message*, %struct.hpi_response*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
